[gd_scene load_steps=2 format=3 uid="uid://vv5bwj2wivhg"]

[ext_resource type="Script" uid="uid://dpx3pxmc8u6sc" path="res://Main.gd" id="1_glv2v"]

[node name="main" type="Node2D"]
script = ExtResource("1_glv2v")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://chm8q361s8ydj")
spawn_path = NodePath("..")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -50.5
offset_right = 53.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Single Player" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Start Game" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/Single Player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
